---
version: 0.16
date:    Sun May 29 18:04:20 EST 2011
changes:
- More refactoring, documentation and functionality
- Solidfied $PM and $POD
- Tempered the 'final' methods
- Added audreyt++ VERSION hack to the 0.11 viral bug fix.
- Made a better version check
- Added Module::Install 1.01 requirement
- Added requires_from to options
---
version: 0.15
date:    Sun May 29 00:07:13 EST 2011
changes:
- Another fix to try to get a stable first release.
---
version: 0.14
date:    Sat May 28 14:55:50 EST 2011
changes:
- Fixed a terrible showstopper bootstrapping bug
---
version: 0.12
date:    Sat May 28 04:11:28 EST 2011
changes:
- Major refactoring... don't even know where to begin.
---
version: 0.11
date:    Wed May 18 14:09:55 EST 2011
changes:
- First Release
- This module is the rename/replacement for Package/inc::Package.
- Package was at 0.10 at the switch, so starting with 0.11.