@@ -1,18 +1,6 @@
-# use inc::Module::Package 0.16 'Ingy:modern 0.03';
-use inc::Module::Package 'Ingy:modern 0.03';
+use inc::Module::Package 0.16 'Ingy:modern 0.03';
 
 # The default module 'lib/Module/Package.pm' has to be very strict
 # and minimal, so we get much of the package info from here:
 perl_version_from 'lib/Module/Package/Plugin.pm';
 requires_from 'lib/Module/Package/Plugin.pm';
-
-__END__
-
-# Deps list generated by:
-author_requires 'Module::Package' => '0.16';
-
-author_requires 'Module::Package::Ingy' => '0.03';
-author_requires 'Module::Install::AckXXX' => '0.13';
-author_requires 'Module::Install::ReadmeFromPod' => '0.12';
-author_requires 'Module::Install::Stardoc' => '0.13';
-author_requires 'Module::Install::VersionCheck' => '0.11';
