@@ -97,7 +97,7 @@ sub write_deps_list {
     my $text = $self->generate_deps_list;
     if (-e $deps_list_file) {
         my $old_text = io($deps_list_file)->all;
-        $text .= "\n1;\n";
+        $text .= "\n1;\n" if $text;
         if ($text ne $old_text) {
             warn "Updating $deps_list_file\n";
             io($deps_list_file)->print($text);
@@ -115,7 +115,7 @@ sub write_deps_list {
             io('Makefile.PL')->print($perl);
             return;
         }
-        $perl .= "\n" . $text;
+        $perl .= "\n" . $text if $text;
         if ($perl ne $old_perl) {
             warn "Updating deps_list in Makefile.PL\n";
             io('Makefile.PL')->print($perl);
@@ -136,11 +136,33 @@ Note: Can't find a place to write deps list, and deps_list option is true.
 
 sub generate_deps_list {
     my ($self) = @_;
-    my @inc;
+    my %skip = map {($_, 1)}
+        qw(Module::Package Module::Install),
+        $self->skip_deps(ref($self)),
+        (map "Module::Install::$_", qw(
+            Admin AuthorRequires AutoInstall Base Bundle Can Compiler
+            Deprecated DSL External Fetch Include Inline Makefile MakeMaker
+            ManifestSkip Metadata Package PAR Run Scripts Share Win32 With
+            WriteAll 
+        ));
+    my @inc = ();
     File::Find::find(sub {
         return unless -f $_ and $_ =~ /\.pm$/;
-        push @inc, $File::Find::name;
+        my $module = $File::Find::name;
+        $module =~ s!inc[\/\\](.*)\.pm$!$1!;
+        $module =~ s!/+!::!g;
+        return if $skip{$module};
+        return if $module =~ /^Test::Base::/;
+        push @inc, $module;
     }, 'inc');
+    if (grep /^Module::Install::TestBase$/, @inc) {
+        @inc = grep not(/^(Test::|Spiffy)/), @inc; 
+    }
+    if (not $Module::Package::plugin_version) {
+        my $module = ref($self);
+        $module =~ s/::[a-z].*//;
+        unshift @inc, $module;
+    };
     my $text = '';
     no strict 'refs';
     $text .= join '', map {
@@ -151,54 +173,23 @@ sub generate_deps_list {
         else {
             "author_requires '$_';\n";
         }
-    } grep {
-        not m!^Module::(Package|Install)$! and
-        not m!^Test::Base::.*$! and   # XXX this smells bad...
-        not m!^Module::Install::(
-            Admin |
-            AuthorRequires |
-            AutoInstall |
-            Base |
-            Bundle |
-            Can |
-            Compiler |
-            Deprecated |
-            DSL |
-            External |
-            Fetch |
-            Include |
-            Inline |
-            Makefile |
-            MakeMaker |
-            ManifestSkip |
-            Metadata |
-            Package |
-            PAR |
-            Run |
-            Scripts |
-            Share |
-            Win32 |
-            With |
-            WriteAll |
-        )$!x;
-    } map {
-        s!inc[\/\\](.*)\.pm$!$1!;
-        s!/+!::!g;
-        $_;
-    } sort @inc;
-    my $module = ref($self);
-    $module =~ s/::[a-z].*//;
-    my $version = do {
-        no strict 'refs';
-        ${"${module}::VERSION"} || 0;
-    };
+    } @inc;
     $text = <<"..." . $text if $text;
 # Deps list generated by:
 author_requires 'Module::Package' => '$Module::Package::VERSION';
 
-author_requires '$module' => '$version';
 ...
     return $text;
+}
+
+sub skip_deps {
+    my ($self, $file) = @_;
+    $file =~ s/::[a-z].*//;
+    $file =~ s!::!/!g;
+    $file .= '.pm';
+    $file = $INC{$file} or return ();
+    my $content = Module::Install::_readperl($file);
+    return ($content =~ m/^use\s+([^\W\d]\w*(?:::\w+)*)\s+(?:[\d\.]+)/mg);
 }
 
 # We generate a MANIFEST.SKIP and add things to it.
@@ -209,20 +200,22 @@ sub manifest_skip {
     return unless $self->options->{manifest_skip};
     $self->mi->manifest_skip;
 
-    # XXX Hardcoded author list for now. Need to change this.
-    # One idea is to let Module::Package plugins declare which plugins are
-    # Author-side only.
-    # Consider $AUTHOR_ONLY globals...
-    io('MANIFEST.SKIP')->append(<<'...');
-^pkg/
-^inc/Module/Install/AckXXX.pm$
-^inc/Module/Install/AuthorRequires.pm$
-^inc/Module/Install/ManifestSkip.pm$
-^inc/Module/Install/ReadmeFromPod.pm$
-^inc/Module/Install/Stardoc.pm$
-^inc/Module/Install/TestML.pm$
-^inc/Module/Install/VersionCheck.pm$
-...
+    $self->set_author_only_defaults;
+    my @skips = (
+        "^pkg/\n",
+        "^inc/.*\\.pod\n",
+    );
+    for (sort keys %INC) {
+        my $path = $_;
+        s!/!::!g;
+        s!\.pm$!!;
+        next unless /^Module::Install::/;
+        no strict 'refs';
+        push @skips, "^inc/$path\$\n"
+            if ${"${_}::AUTHOR_ONLY"}
+    }
+
+    io('MANIFEST.SKIP')->append(join '', @skips);
 
     $self->mi->clean_files('MANIFEST MANIFEST.SKIP');
 }
@@ -272,8 +265,9 @@ sub install_bin { my $self = shift; $self->mi->_install_bin(@_) }
 sub WriteAll { my $self = shift; $self->mi->_WriteAll(@_) }
 
 #-----------------------------------------------------------------------------#
-# This gets called very last on the author side.
+# Other housekeeping stuffs
 #-----------------------------------------------------------------------------#
+# This gets called very last on the author side.
 sub replicate_module_package {
     my $target_file = 'inc/Module/Package.pm';
     if (-e 'inc/.author' and not -e $target_file) {
@@ -301,14 +295,30 @@ Try upgrading Module::Package.
         $version == $inc::Module::Package::VERSION;
 }
 
+sub set_author_only_defaults {
+    my @known_author_only = qw(
+        AckXXX AuthorRequires ManifestSkip ReadmeFromPod Stardoc TestML
+        VersionCheck
+    );
+    for (@known_author_only) {
+        no strict 'refs';
+        ${"Module::Install::${_}::AUTHOR_ONLY"} = 1
+            unless defined ${"Module::Install::${_}::AUTHOR_ONLY"};
+    }
+}
+
+#-----------------------------------------------------------------------------#
+# These are the usable subclasses that this module provides.  Currently there
+# is only one, ':basic'. It does the minimum amount possible.  Even though it
+# seems to do nothing, there is plenty of functionality that happens in the
+# final() method.
+#-----------------------------------------------------------------------------#
 package Module::Package::Plugin::basic;
 use Moo;
 extends 'Module::Package::Plugin';
 
 sub main {
     my ($self) = @_;
-    $self->all_from
-        unless $self->mi->name;
 }
 
 1;
